--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   },
   "homepage": "https://github.com/OpenCNX/RTC-APIs#readme",
   "dependencies": {
+    "debug": "^4.0.1",
     "node-fetch": "^2.2.0",
+    "save": "^2.3.2",
     "xml2js": "^0.4.19"
   }
 }
